--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@vant/weapp": "^1.0.6",
     "axios": "^0.19.2",
+    "echarts": "^4.8.0",
     "element-ui": "^2.13.0",
     "es6-promise": "^4.2.8",
     "file-saver": "^2.0.2",
